[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--verbose --cov=gbq --cov-report xml:/tmp/coverage.xml --cov-report term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
data_file = "/tmp/gbq_coverage"

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover"
]

# version bumping
[tool.hyper-bump-it.git.actions]
commit = "create-and-push"
branch = "create-and-push"

[[tool.hyper-bump-it.files]]
file_glob = "setup.cfg"
keystone = true
search_format_pattern = "version = {version}"

[[tool.hyper-bump-it.files]]
file_glob = "columbo/__init__.py"

[[tool.hyper-bump-it.files]]
file_glob = "docs/index.md"
search_format_pattern = "GBQ - {version}"

[[tool.hyper-bump-it.files]]
file_glob = "CHANGELOG.md"
search_format_pattern = "## [Unreleased]"
replace_format_pattern = """## [Unreleased]
## [{version}] - {today}"""
