[build-system]
requires = ["hatchling==1.18.0"]
build-backend = "hatchling.build"

[project]
name = "gbq"
version = "1.1.0"
description = "Python wrapper for interacting Google BigQuery."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Jash Parekh", email = "jparekh1@wayfair.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "google-cloud-bigquery",
    "pydantic>=2.4.0,<3"
]

[project.urls]
Homepage = "https://github.com/wayfair-incubator/gbq"
changelog = "https://github.com/wayfair-incubator/gbq/blob/main/CHANGELOG.md"
issues = "https://github.com/wayfair-incubator/gbq/issues"
documentation = "https://wayfair-incubator.github.io/gbq"

[tool.hatch.build.targets.sdist]
include = [
    "/gbq",
]

# type checking
[tool.mypy]
ignore_missing_imports = true

# testing
[tool.pytest.ini_options]
addopts = "--verbose --cov=gbq --cov-report xml:/tmp/coverage.xml --cov-report term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
data_file = "/tmp/gbq_coverage"

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover"
]

# linting and formatting with ruff
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["gbq"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# security scanning
[tool.bandit]
exclude_dirs = ["*venv*", "*env*", "*scratch*"]

# version bumping
[tool.hyper-bump-it.git.actions]
commit = "create-and-push"
branch = "create-and-push"

[[tool.hyper-bump-it.files]]
file_glob = "pyproject.toml"
keystone = true
search_format_pattern = "version = \"{version}\""

[[tool.hyper-bump-it.files]]
file_glob = "gbq/__init__.py"

[[tool.hyper-bump-it.files]]
file_glob = "docs/index.md"
search_format_pattern = "GBQ - {version}"

[[tool.hyper-bump-it.files]]
file_glob = "CHANGELOG.md"
search_format_pattern = "## [Unreleased]"
replace_format_pattern = """## [Unreleased]

## [{version}] - {today}"""
