[metadata]
name = gbq
url = https://github.com/wayfair-incubator/gbq
author = Jash Parekh
author_email = jparekh1@wayfair.com
version = 0.6.0-rc1
description = Python wrapper for interacting Google BigQuery.
long_description = file: README.md
long_description_content_type = text/markdown
license = See LICENSE
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License

[options]

python_requires = >=3.8
install_requires =
    typing_extensions~=3.7; python_version < '3.8'
    google-cloud-bigquery
    pydantic
packages = find:

[options.package_data]

gbq = py.typed

[options.packages.find]
exclude = "*.tests", "*.tests.*", "tests.*", "tests"
